# noisyvalue

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  visual.py
example/: contingency.ipynb  example.ipynb  minmax.ipynb  new_contingency.ipynb  tutorial.ipynb
src/: analysis.py  array.py  consolidate.py  core.py  graph.py  io.py  noise.py  release.py  util.py  visual.py
test/: conftest.py  test_analysis.py  test_array.py  test_consolidate.py  test_core.py  test_io.py  test_release.py  test_visual.py
